# NCS

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh
.github/workflows/: linux.yml  windows.yml
include/: Entity.hpp  NCS.hpp  Registry.hpp
include/core/: Component.hpp  Node.hpp  Registry.hpp  Relation.hpp  System.hpp  Uuid.hpp  Viewer.hpp
sample/: CMakeLists.txt
test/: CMakeLists.txt  TestCommon.hpp  TestComponent.hpp  TestMain.cpp
